--- a/test/storybook/docs/Testing/Decorators/State/@State.mdx
+++ b/test/storybook/docs/Testing/Decorators/State/@State.mdx
@@ -25,7 +25,7 @@ The `@State` decorator is used for managing internal data that can change over t
 
 ## Test Cases
 
-Note: Test cases are high‑level scenarios, not a 1‑to‑1 mapping to tests (it() blocks). A single WDIO test can exercise many generated components, and a component can participate in multiple tests. The “Tested By” column in the Generated Components table shows which case(s) (#1, #2) each component is covered by. All @State tests reside under <code>test/wdio/state/tests</code>.
+Note: Test cases are high‑level scenarios, not a 1‑to‑1 mapping to tests (it() blocks). A single WDIO test can exercise many generated components, and a component can participate in multiple tests. The “Tested By” column in the Generated Components table shows which case(s) (#1, #2) each component is covered by. All @State tests reside under <code>test/wdio/state</code>.
 
 export const StateTestCasesTable = () => {
   const items = overlay.items || [];
